--- a/03-变量的数据类型.html
+++ b/03-变量的数据类型.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <script>
-        //基本数据类型:string.number.boolean.undefind.null.symbol    
+        //基本数据类型:string.number.boolean.undefined.null.symbol    
         //引用数据类型:对象.数组.函数
 
         //判断数据类型type of
@@ -36,6 +36,7 @@
         console.log(isNaN(num));
         var str='哈哈';
         console.log(isNaN(str));
+        console.log(isNaN(NaN));
 
     </script>
 </body>
